--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,12 @@ jobs:
         - touch stages/04-Wifibroadcast/SKIP
       script:
         - docker run --privileged --rm -v /dev:/dev -v $(pwd):/root ${DOCKER} /bin/bash -c 'cd /root; ./buildwithlog.sh'
+      after_script:
+        - git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
+        - git fetch --unshallow
+        - export KERNEL_VERSION=$(git log --format=%h -1 stages/00-Prerequisites stages/01-Baseimage stages/02-Kernel)
+        - find deploy/ -name "*.img" -exec mv {} deploy/kernel_${KERNEL_VERSION}.img +
+        - docker run --rm -v $(pwd):/root ${DOCKER} xz -v -z /root/deploy/kernel_${KERNEL_VERSION}.img
     - stage: Userspace
       name: "Add userspace stuff"
       before_script:
