travis: Use image from working directory, deployment seems to fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,10 @@ jobs:
         - git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
         - git fetch --unshallow
         - export KERNEL_VERSION=$(git log --format=%h -1 stages/00-Prerequisites stages/01-Baseimage stages/02-Kernel)
-        - find deploy/ -name "*.img" -exec mv {} deploy/kernel_${KERNEL_VERSION}.img +
-        - docker run --rm -v $(pwd):/root ${DOCKER} xz -v -z /root/deploy/kernel_${KERNEL_VERSION}.img
+        # FIXME: this does not work for deployments
+        # - find deploy/ -name "*.img" -exec mv {} deploy/kernel_${KERNEL_VERSION}.img +
+        - mv work/02-Kernel/IMAGE.img kernel_${KERNEL_VERSION}.img
+        - docker run --rm -v $(pwd):/root ${DOCKER} xz -v -z /root/kernel_${KERNEL_VERSION}.img
     - stage: Userspace
       name: "Add userspace stuff"
       before_script:
