--- a/.travis.yml
+++ b/.travis.yml
@@ -34,10 +34,36 @@ jobs:
     - stage: Userspace
       name: "Add userspace stuff"
       before_script:
-        - docker pull ${DOCKER}
+        - git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
+        - git fetch --unshallow
+        - export KERNEL_VERSION=$(git log --format=%h -1 stages/00-Prerequisites stages/01-Baseimage stages/02-Kernel)
+        - .ci/check_stage2.sh
+        - if [[ -z "${SKIP_BUILD}" ]]; then
+            docker pull ${DOCKER};
+          fi
 # Hack: don't build kernel (TODO: fetch image with kernel)
         - touch stages/00-Prerequisites/SKIP
         - touch stages/01-Baseimage/SKIP
         - touch stages/02-Kernel/SKIP
       script:
-        - docker run --privileged --rm -v /dev:/dev -v $(pwd):/root ${DOCKER} /bin/bash -c 'cd /root; ./buildwithlog.sh'
+        - if [[ -z "${SKIP_BUILD}" ]]; then
+            docker run --rm -v $(pwd):/root ${DOCKER} xz -v -d /root/kernel_${KERNEL_VERSION}.img.xz;
+            sudo mv kernel_${KERNEL_VERSION}.img work/02-Kernel/IMAGE.img;
+            docker run --privileged --rm -v /dev:/dev -v $(pwd):/root ${DOCKER} /bin/bash -c 'cd /root; ./buildwithlog.sh';
+          else
+            echo "No base image; kernel stage probably failed";
+            exit 1;
+          fi
+      before_deploy:
+        - sudo find deploy/ -name "*.img" -exec mv {} deploy/openhd.img +
+        - sudo chmod a+rw deploy/*
+        - docker run --rm -v $(pwd):/root ${DOCKER} xz -v -z /root/deploy/openhd.img
+      deploy:
+        provider: releases
+        api_key: ${GITHUB_OAUTH_TOKEN}
+        file: deploy/openhd.img.xz
+        skip_cleanup: true
+        on:
+          tags: true
+        draft: true
+        name: ${TRAVIS_TAG}
